Name:                MongoDataSeeder
Version:             0.0.1
Description:         Create a datastream for mongoDB
License:             BSD3
License-file:        LICENSE
Author:              Scott Murphy
Maintainer:          scottmurphy09@gmail.com    
Build-Type:          Simple
Cabal-Version:       >=1.2

library 
    exposed-modules: MongoDataSeeder

    extensions:      TemplateHaskell
                     QuasiQuotes
                     OverloadedStrings
                     NoImplicitPrelude
                     CPP
                     MultiParamTypeClasses
                     TypeFamilies
                     GADTs
                     GeneralizedNewtypeDeriving
                     FlexibleContexts
                     EmptyDataDecls
                     NoMonomorphismRestriction
                     TypeFamilies
                     Arrows

    Build-Depends:      base                     >= 3         &&   <   5
                       ,mongoDB                  >= 1.4.0     &&   < 1.5.0
                       ,bytestring               >= 0.9       &&   < 1.0
                       ,entropy                  >= 0.2.1     &&   < 0.2.2
                       ,utf8-string              >= 0.3.7     &&   < 1.0
                       ,random                   >= 1.0       &&   < 1.1
                       ,parallel                 >= 3.2.0     &&   < 3.3
                       ,monad-par-extras         >= 0.3.2     &&   < 4.0
                       ,network                  >= 2.3.1.0   &&   < 2.4
                       ,time                     >= 1.4       &&   < 1.5
                       ,old-locale               >= 1.0.0.4   &&   < 1.1
                       ,process                  >= 1.1.0.1   &&   <= 1.2.0.0
                       ,mtl                      >= 2.1       &&   < 2.2
                       ,bson                     >= 0.2.1     &&   <= 0.2.4
                       ,aeson                    >= 0.6.2.1   &&   < 0.7.1.0
                       ,aeson-bson               >= 0.3       &&   < 0.4
                       ,HTTP                     >= 4000.2.8  &&   < 4000.3.8
                       ,yaml                     >= 0.8.2.4   &&   < 0.9
                       ,text                     >= 0.11.2 
                       ,spawn                    >= 0.3
                       ,attoparsec == 0.10.3.0
                       

Executable mongoSeed


    main-is:           Main.hs

    build-depends:      base

                       
                       
    ghc-options:      -threaded -O2 




